--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+@font-face {
+  font-family: DueDate;
+  src: local("DueDate"), url("Due.TTF") format("truetype");
+  font-weight: bold;
+}
