--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(19, 19, 19);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,4 +19,24 @@
   font-family: DueDate;
   src: local("DueDate"), url("Due.TTF") format("truetype");
   font-weight: bold;
+}
+
+/* mediaquery if the device is in portraight*/
+@media (orientation: portrait) {
+  .Link {
+    font-size: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .CRPLogo {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.1;
+  }
 }
